# reproducing-mcculloch-pitts

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_neuron/: __init__.py  gates.py  network.py  neuron.py
src/mcp_neuron/examples/: heat_cold.py  order0_logic.py
tests/: test_gates.py  test_heat_cold.py  test_neuron.py  test_order0_logic.py
