[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-neuron"
version = "0.1.0"
description = "A modern, simple Python implementation of the McCulloch-Pitts (1943) neuron model."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
